docs: installation methods
Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

--- a/website/docs/intro.mdx
+++ b/website/docs/intro.mdx
@@ -2,11 +2,38 @@
 sidebar_position: 1
 ---
 
-# Getting started
+# Getting Started
 
-Welcome to the chess-tui documentation !
+import Logo from '/img/logo.png';
 
-<img src="../static/img/logo.png" alt="logo" width="200"/>
+<div style={{ display: 'flex', alignItems: 'center', justifyContent: 'space-between' }}>
+  <div style={{ flex: '1' }}>
+    ### Welcome to the chess-tui documentation!
+
+    Chess TUI is a terminal chess game written in [Rust](https://www.rust-lang.org/) . It is a simple and easy-to-use chess game that you can play in your terminal.
+
+    This documentation will guide you through the different features of the game, how to install it, and the code architecture of the project if you want to contribute.
+  </div>
+  <div style={{ marginLeft: '20px' }}>
+    <img src={Logo} alt="logo" width="200" />
+  </div>
+</div>
 
 
-Chess TUI is a terminal chess game written in Rust. It is a simple and easy to use chess game that you can play in your terminal.
+
+:::warning Disclaimer
+This project is still in development and some features may not be available yet.
+:::
+
+## Quick install
+
+```bash
+cargo install chess-tui
+```
+
+**Then run the game with:**
+```bash
+chess-tui
+```
+
+You can find a more detailed installation guide with your favorite package manager in the [Installation](/docs/installation/Cargo) section.
