docs: update the doc
Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

--- a/website/docs/intro.mdx
+++ b/website/docs/intro.mdx
@@ -35,3 +35,20 @@ chess-tui
 ```
 
 You can find a more detailed installation guide with your favorite package manager in the [Installation](/docs/Installation/Cargo) section.
+
+## Game Controls
+
+### Basic Controls
+
+- **Arrow keys** or **h/j/k/l**: Move the cursor
+- **Space** or **Enter**: Select/move a piece
+- **Esc**: Deselect a piece or close popups
+- **?**: Show help menu with all controls
+- **q**: Quit the game
+- **b**: Return to home menu
+- **s**: Cycle through available skins
+- **r**: Restart the current game
+- **p**: Navigate to the previous position in history (go back in time)
+- **n**: Navigate to the next position in history (go forward in time)
+
+Press **?** during gameplay to see all available controls in the help menu.
