docs: website and blog fixes
Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

--- a/website/blog/2023-12-02-release-0.1.2.md
+++ b/website/blog/2023-12-02-release-0.1.2.md
@@ -1,5 +1,5 @@
 ---
-title: 0.1.2
+title: Release 0.1.2 - Remove explicitly set background on board blocks, Game fully working
 authors:
   - name: Thomas Mauran
     url: https://github.com/thomas-mauran
@@ -7,7 +7,7 @@ tags:
   - release
 ---
 
-# 0.1.2
+# Release 0.1.2 - Remove explicitly set background on board blocks, Game fully working
 
 **Released:** December 2, 2023
 
