--- a/website/blog/2025-12-13-release-2.1.0.md
+++ b/website/blog/2025-12-13-release-2.1.0.md
@@ -1,5 +1,5 @@
 ---
-title: 2.1.0
+title: Release 2.1.0 - Add sounds, Lichess + doc + disconnect, Bot auto install script and debug popup
 authors:
   - name: Thomas Mauran
     url: https://github.com/thomas-mauran
@@ -7,7 +7,7 @@ tags:
   - release
 ---
 
-# 2.1.0
+# Release 2.1.0 - Add sounds, Lichess + doc + disconnect, Bot auto install script and debug popup
 
 **Released:** December 13, 2025
 
