--- a/website/blog/2025-12-14-release-2.1.1.md
+++ b/website/blog/2025-12-14-release-2.1.1.md
@@ -1,5 +1,5 @@
 ---
-title: 2.1.1
+title: Release 2.1.1 - - fix style for the vertical alignment of the left side number
 authors:
   - name: Thomas Mauran
     url: https://github.com/thomas-mauran
@@ -7,7 +7,7 @@ tags:
   - release
 ---
 
-# 2.1.1
+# Release 2.1.1 - - fix style for the vertical alignment of the left side number
 
 **Released:** December 14, 2025
 
