--- a/website/blog/2025-12-15-release-2.1.2.md
+++ b/website/blog/2025-12-15-release-2.1.2.md
@@ -1,5 +1,5 @@
 ---
-title: 2.1.2
+title: Release 2.1.2 - - build on intel macos
 authors:
   - name: Thomas Mauran
     url: https://github.com/thomas-mauran
@@ -7,7 +7,7 @@ tags:
   - release
 ---
 
-# 2.1.2
+# Release 2.1.2 - - build on intel macos
 
 **Released:** December 15, 2025
 
