--- a/website/blog/2023-12-03-release-0.1.3.md
+++ b/website/blog/2023-12-03-release-0.1.3.md
@@ -1,5 +1,5 @@
 ---
-title: 0.1.3
+title: Release 0.1.3 - pawn promotion
 authors:
   - name: Thomas Mauran
     url: https://github.com/thomas-mauran
@@ -7,7 +7,7 @@ tags:
   - release
 ---
 
-# 0.1.3
+# Release 0.1.3 - pawn promotion
 
 **Released:** December 3, 2023
 
