--- a/website/blog/2023-12-04-release-1.0.0.md
+++ b/website/blog/2023-12-04-release-1.0.0.md
@@ -1,5 +1,5 @@
 ---
-title: 1.0.0
+title: Release 1.0.0 - Working game, Helper video demo + readme setup for features + render script
 authors:
   - name: Thomas Mauran
     url: https://github.com/thomas-mauran
@@ -7,7 +7,7 @@ tags:
   - release
 ---
 
-# 1.0.0
+# Release 1.0.0 - Working game, Helper video demo + readme setup for features + render script
 
 **Released:** December 4, 2023
 
