--- a/website/blog/2025-12-16-release-2.2.0.md
+++ b/website/blog/2025-12-16-release-2.2.0.md
@@ -1,5 +1,5 @@
 ---
-title: 2.2.0
+title: Release 2.2.0 - Blinking selected cell cursor, Improve the color selection popup, Allow engine to have an argumen...
 authors:
   - name: Thomas Mauran
     url: https://github.com/thomas-mauran
@@ -7,7 +7,7 @@ tags:
   - release
 ---
 
-# 2.2.0
+# Release 2.2.0 - Blinking selected cell cursor, Improve the color selection popup, Allow engine to have an argumen...
 
 **Released:** December 16, 2025
 
