docs: improve mobile version of the doc and fix warnings
Signed-off-by: Thomas Mauran <thomasmauran@yahoo.com>

--- a/website/blog/2023-12-03-release-0.1.3.md
+++ b/website/blog/2023-12-03-release-0.1.3.md
@@ -1,8 +1,7 @@
 ---
 title: Release 0.1.3 - pawn promotion
 authors:
-  - name: Thomas Mauran
-    url: https://github.com/thomas-mauran
+  - thomas-mauran
 tags:
   - release
 ---
@@ -13,6 +12,8 @@ tags:
 
 - pawn promotion
 - refactors
+
+<!-- truncate -->
 
 ## Full Changelog
 
