--- a/website/blog/2023-12-04-release-1.0.0.md
+++ b/website/blog/2023-12-04-release-1.0.0.md
@@ -1,8 +1,7 @@
 ---
 title: Release 1.0.0 - Working game, Helper video demo + readme setup for features + render script
 authors:
-  - name: Thomas Mauran
-    url: https://github.com/thomas-mauran
+  - thomas-mauran
 tags:
   - release
 ---
@@ -19,7 +18,7 @@ tags:
 * feat(board): draw by 50 moves and 3 times same position by [@thomas-mauran](https://github.com/thomas-mauran) in https://github.com/thomas-mauran/chess-tui/pull/30
 * refactor: use & borrowing for move_history instead of clones by [@thomas-mauran](https://github.com/thomas-mauran) in https://github.com/thomas-mauran/chess-tui/pull/32
 
-
+<!-- truncate -->
 
 ## Full Changelog
 
