--- a/website/blog/2024-03-26-release-1.2.1.md
+++ b/website/blog/2024-03-26-release-1.2.1.md
@@ -1,8 +1,7 @@
 ---
 title: Release 1.2.1 - ASCII Mode and Key Event Fixes
 authors:
-  - name: Thomas Mauran
-    url: https://github.com/thomas-mauran
+  - thomas-mauran
 tags:
   - release
 date: 2024-03-26
