--- a/website/blog/2024-11-17-release-1.4.0.md
+++ b/website/blog/2024-11-17-release-1.4.0.md
@@ -1,8 +1,7 @@
 ---
 title: Release 1.4.0 - Threefold Repetition Fix and Board Rotation
 authors:
-  - name: Thomas Mauran
-    url: https://github.com/thomas-mauran
+  - thomas-mauran
 tags:
   - release
 date: 2024-11-17
