--- a/website/blog/2025-12-13-release-2.1.0.md
+++ b/website/blog/2025-12-13-release-2.1.0.md
@@ -1,8 +1,7 @@
 ---
 title: Release 2.1.0 - Add sounds, Lichess + doc + disconnect, Bot auto install script and debug popup
 authors:
-  - name: Thomas Mauran
-    url: https://github.com/thomas-mauran
+  - thomas-mauran
 tags:
   - release
 ---
@@ -20,7 +19,7 @@ tags:
 * feat: bot auto install script and debug popup by [@thomas-mauran](https://github.com/thomas-mauran) in https://github.com/thomas-mauran/chess-tui/pull/166
 * docs: blog posts + releases blog posts by [@thomas-mauran](https://github.com/thomas-mauran) in https://github.com/thomas-mauran/chess-tui/pull/167
 
-
+<!-- truncate -->
 
 ## Full Changelog
 
