--- a/website/blog/2025-12-15-release-2.1.2.md
+++ b/website/blog/2025-12-15-release-2.1.2.md
@@ -1,17 +1,18 @@
 ---
-title: Release 2.1.2 - - build on intel macos
+title: Release 2.1.2 - build on intel macos
 authors:
-  - name: Thomas Mauran
-    url: https://github.com/thomas-mauran
+  - thomas-mauran
 tags:
   - release
 ---
 
-# Release 2.1.2 - - build on intel macos
+# Release 2.1.2 - build on intel macos
 
 **Released:** December 15, 2025
 
 - build on intel macos
+
+<!-- truncate -->
 
 ## Full Changelog
 
