--- a/website/blog/2025-12-16-release-2.2.0.md
+++ b/website/blog/2025-12-16-release-2.2.0.md
@@ -1,8 +1,7 @@
 ---
 title: Release 2.2.0 - Blinking selected cell cursor, Improve the color selection popup, Allow engine to have an argumen...
 authors:
-  - name: Thomas Mauran
-    url: https://github.com/thomas-mauran
+  - thomas-mauran
 tags:
   - release
 ---
@@ -19,7 +18,7 @@ tags:
 * feat: allow engine to have an argument too by [@thomas-mauran](https://github.com/thomas-mauran) in https://github.com/thomas-mauran/chess-tui/pull/172
 * feat: deb build by [@thomas-mauran](https://github.com/thomas-mauran) in https://github.com/thomas-mauran/chess-tui/pull/173
 
-
+<!-- truncate -->
 
 ## Full Changelog
 
