--- a/website/blog/2023-12-02-release-0.1.2.md
+++ b/website/blog/2023-12-02-release-0.1.2.md
@@ -1,8 +1,7 @@
 ---
 title: Release 0.1.2 - Remove explicitly set background on board blocks, Game fully working
 authors:
-  - name: Thomas Mauran
-    url: https://github.com/thomas-mauran
+  - thomas-mauran
 tags:
   - release
 ---
@@ -22,6 +21,7 @@ tags:
 * [@Kuruyia](https://github.com/Kuruyia) made their first contribution in https://github.com/thomas-mauran/chess-tui/pull/16
 * [@thomas-mauran](https://github.com/thomas-mauran) made their first contribution in https://github.com/thomas-mauran/chess-tui/pull/19
 
+<!-- truncate -->
 
 ## Full Changelog
 
