--- a/website/blog/2023-12-09-release-1.1.0.md
+++ b/website/blog/2023-12-09-release-1.1.0.md
@@ -1,8 +1,7 @@
 ---
 title: Release 1.1.0 - Home Menu, Credits, and Platform Support
 authors:
-  - name: Thomas Mauran
-    url: https://github.com/thomas-mauran
+  - thomas-mauran
 tags:
   - release
 date: 2023-12-09
