--- a/website/blog/2024-02-28-release-1.2.0.md
+++ b/website/blog/2024-02-28-release-1.2.0.md
@@ -1,8 +1,7 @@
 ---
 title: Release 1.2.0 - Vim Shortcuts and UCI Engine Support
 authors:
-  - name: Thomas Mauran
-    url: https://github.com/thomas-mauran
+  - thomas-mauran
 tags:
   - release
 date: 2024-02-28
