--- a/website/blog/2024-11-15-release-1.3.0.md
+++ b/website/blog/2024-11-15-release-1.3.0.md
@@ -1,8 +1,7 @@
 ---
 title: Release 1.3.0 - Config File, History System, and Material Difference
 authors:
-  - name: Thomas Mauran
-    url: https://github.com/thomas-mauran
+  - thomas-mauran
 tags:
   - release
 date: 2024-11-15
