--- a/website/blog/2024-11-26-release-1.5.0.md
+++ b/website/blog/2024-11-26-release-1.5.0.md
@@ -1,8 +1,7 @@
 ---
 title: Release 1.5.0 - Website, Mouse Support, and Major Refactoring
 authors:
-  - name: Thomas Mauran
-    url: https://github.com/thomas-mauran
+  - thomas-mauran
 tags:
   - release
 date: 2024-11-26
