--- a/website/blog/2024-12-15-release-1.6.0.md
+++ b/website/blog/2024-12-15-release-1.6.0.md
@@ -1,8 +1,7 @@
 ---
 title: Release 1.6.0 - Online Multiplayer Support
 authors:
-  - name: Thomas Mauran
-    url: https://github.com/thomas-mauran
+  - thomas-mauran
 tags:
   - release
 date: 2024-12-15
