--- a/website/blog/2025-02-03-release-1.6.1.md
+++ b/website/blog/2025-02-03-release-1.6.1.md
@@ -1,8 +1,7 @@
 ---
 title: Release 1.6.1 - Logging System and Multiplayer Fixes
 authors:
-  - name: Thomas Mauran
-    url: https://github.com/thomas-mauran
+  - thomas-mauran
 tags:
   - release
 date: 2025-02-03
