--- a/website/blog/2025-09-03-release-1.6.2.md
+++ b/website/blog/2025-09-03-release-1.6.2.md
@@ -1,8 +1,7 @@
 ---
 title: Release 1.6.2 - FEN Serialization, Ruci Migration, and Bot Improvements
 authors:
-  - name: Thomas Mauran
-    url: https://github.com/thomas-mauran
+  - thomas-mauran
 tags:
   - release
 date: 2025-09-03
