--- a/website/blog/2025-12-11-release-2.0.0.md
+++ b/website/blog/2025-12-11-release-2.0.0.md
@@ -1,8 +1,7 @@
 ---
 title: Release 2.0.0 - Major Update with Shakmaty Integration, Skins, and Lichess Support
 authors:
-  - name: Thomas Mauran
-    url: https://github.com/thomas-mauran
+  - thomas-mauran
 tags:
   - release
   - major-update
