--- a/website/blog/2025-12-14-release-2.1.1.md
+++ b/website/blog/2025-12-14-release-2.1.1.md
@@ -1,18 +1,19 @@
 ---
-title: Release 2.1.1 - - fix style for the vertical alignment of the left side number
+title: Release 2.1.1 - fix style for the vertical alignment of the left side number
 authors:
-  - name: Thomas Mauran
-    url: https://github.com/thomas-mauran
+  - thomas-mauran
 tags:
   - release
 ---
 
-# Release 2.1.1 - - fix style for the vertical alignment of the left side number
+# Release 2.1.1 - fix style for the vertical alignment of the left side number
 
 **Released:** December 14, 2025
 
 - fix style for the vertical alignment of the left side number
 - fix the piece style with different scaling
+
+<!-- truncate -->
 
 ## Full Changelog
 
